Some fixes + ablation tracker ...

--- a/runner.ipynb
+++ b/runner.ipynb
@@ -2,36 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fatal: destination path 'thesis' already exists and is not an empty directory.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Replace with your token and repo URL\n",
-    "token = \"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\"\n",
-    "!git clone https://{token}@github.com/puru-samal/thesis.git\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using device: cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import yaml\n",
@@ -55,17 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting _configs/config_test.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile _configs/config_test.yaml\n",
     "\n",
@@ -215,72 +180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading dataset from: dataset/serialized/merged_ts=4-4_2bar_tr0.80-va0.10-te0.10_train.pkl...\n",
-      "Processing 3068 samples...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Accumulating:: 100%|██████████| 3068/3068 [00:00<00:00, 6311.81sample/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipped 0 samples due to errors.\n",
-      "Loaded and processed 3068 samples.\n",
-      "\n",
-      "Loading dataset from: dataset/serialized/merged_ts=4-4_2bar_tr0.80-va0.10-te0.10_val.pkl...\n",
-      "Processing 383 samples...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Accumulating:: 100%|██████████| 383/383 [00:00<00:00, 6317.62sample/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipped 0 samples due to errors.\n",
-      "Loaded and processed 383 samples.\n",
-      "\n",
-      "Loading dataset from: dataset/serialized/merged_ts=4-4_2bar_tr0.80-va0.10-te0.10_test.pkl...\n",
-      "Processing 383 samples...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Accumulating:: 100%|██████████| 383/383 [00:00<00:00, 6316.77sample/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipped 0 samples due to errors.\n",
-      "Loaded and processed 383 samples.\n",
-      "\n",
-      "Grid shape: torch.Size([16, 33, 9, 3])\n",
-      "Samples shape: 16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Load Datasets\n",
     "train_dataset = DrumMIDIDataset(\n",
@@ -348,17 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max length: 33\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "NUM_QUARTERS_PER_BAR = 4 # 4/4 time signature\n",
     "MAX_LENGTH = config[\"data\"][\"num_bars\"] * NUM_QUARTERS_PER_BAR * config[\"data\"][\"steps_per_quarter\"] + 1\n",
@@ -374,50 +268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "==============================================================================================================\n",
-       "Layer (type:depth-idx)                                       Output Shape              Param #\n",
-       "==============================================================================================================\n",
-       "GrooveIQ                                                     [16, 33, 9]               27\n",
-       "├─DrumEncoderWrapper: 1-1                                    [16, 33, 9, 32]           --\n",
-       "│    └─DrumAxialTransformer: 2-1                             [16, 33, 9, 32]           --\n",
-       "│    │    └─Conv2d: 3-1                                      [16, 32, 33, 9]           128\n",
-       "│    │    └─AxialPositionalEmbedding: 3-2                    [16, 32, 33, 9]           1,344\n",
-       "│    │    └─Sequential: 3-3                                  [16, 32, 33, 9]           27,008\n",
-       "├─Linear: 1-2                                                [16, 33, 9, 1]            33\n",
-       "├─Linear: 1-3                                                [16, 33, 9]               297\n",
-       "├─LearnableBinsQuantizer: 1-4                                [16, 33, 3]               8\n",
-       "├─LearnableBinsQuantizer: 1-5                                [16, 33, 3]               16\n",
-       "├─Linear: 1-6                                                [16, 33, 32]              896\n",
-       "├─Linear: 1-7                                                [16, 33, 32]              320\n",
-       "├─DrumDecoderWrapper: 1-8                                    [16, 33, 27]              --\n",
-       "│    └─TransformerDecoder: 2-2                               [16, 33, 32]              --\n",
-       "│    │    └─ModuleList: 3-4                                  --                        141,792\n",
-       "│    │    └─LayerNorm: 3-5                                   [16, 33, 32]              64\n",
-       "│    └─Linear: 2-3                                           [16, 33, 27]              891\n",
-       "==============================================================================================================\n",
-       "Total params: 172,824\n",
-       "Trainable params: 172,824\n",
-       "Non-trainable params: 0\n",
-       "Total mult-adds (Units.MEGABYTES): 93.49\n",
-       "==============================================================================================================\n",
-       "Input size (MB): 0.06\n",
-       "Forward/backward pass size (MB): 29.28\n",
-       "Params size (MB): 0.66\n",
-       "Estimated Total Size (MB): 29.99\n",
-       "=============================================================================================================="
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_config = config[\"model\"]\n",
     "model_config.update(\n",
@@ -426,7 +279,7 @@
     "    M=grid.shape[3]\n",
     ")\n",
     "model = GrooveIQ(**model_config)\n",
-    "summary(model, input_data = grid, device = \"cpu\")"
+    "summary(model, input_data = grid, device = device)"
    ]
   },
   {
@@ -438,44 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using device: cpu\n",
-      "\n",
-      "🔧 Configuring Optimizer:\n",
-      "├── Type: ADAMW\n",
-      "├── Base LR: 0.0004\n",
-      "├── Weight Decay: 1e-06\n",
-      "├── Parameter Groups:\n",
-      "│   ├── Group: self_attn\n",
-      "│   │   ├── LR: 0.0002\n",
-      "│   │   └── Patterns: []\n",
-      "│   ├── Group: ffn\n",
-      "│   │   ├── LR: 0.0002\n",
-      "│   │   └── Patterns: []\n",
-      "│   └── Default Group (unmatched parameters)\n",
-      "└── AdamW Specific:\n",
-      "    ├── Betas: [0.9, 0.999]\n",
-      "    ├── Epsilon: 1e-08\n",
-      "    └── AMSGrad: False\n",
-      "\n",
-      "📈 Configuring Learning Rate Scheduler:\n",
-      "├── Type: COSINE\n",
-      "├── Cosine Annealing Settings:\n",
-      "│   ├── T_max: 15 epochs (2880 steps)\n",
-      "│   └── Min LR: 1e-07\n",
-      "├── Warmup Settings:\n",
-      "│   ├── Duration: 5 epochs (960 steps)\n",
-      "│   ├── Start Factor: 0.1\n",
-      "│   └── End Factor: 1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer = GrooveIQ_Trainer(\n",
     "    model = model,\n",
@@ -504,60 +322,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                                                         \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "📊 Metrics (Epoch 0):\n",
-      "├── TRAIN:\n",
-      "│   ├── hit_acc: 0.5605\n",
-      "│   ├── hit_bce: 1.5207\n",
-      "│   ├── hit_f1: 0.3359\n",
-      "│   ├── hit_perplexity: 4.6709\n",
-      "│   ├── hit_ppv: 0.2064\n",
-      "│   ├── hit_tpr: 0.9168\n",
-      "│   ├── joint_loss: 1.9110\n",
-      "│   ├── offset_ahead: 0.2049\n",
-      "│   ├── offset_behind: 0.3441\n",
-      "│   ├── offset_mae: 0.0879\n",
-      "│   ├── offset_mse: 0.0534\n",
-      "│   ├── offset_penalty: 0.1111\n",
-      "│   ├── offset_tightness: 0.4954\n",
-      "│   ├── velocity_corr: 0.2903\n",
-      "│   ├── velocity_mae: 0.3219\n",
-      "│   ├── velocity_mse: 0.1519\n",
-      "│   ├── velocity_penalty: 0.0739\n",
-      "│   └── velocity_range_diff: 0.0508\n",
-      "└── VAL:\n",
-      "    ├── hit_acc: 0.4379\n",
-      "    ├── hit_f1: 0.2433\n",
-      "    ├── hit_ppv: 0.1459\n",
-      "    ├── hit_tpr: 0.8085\n",
-      "    ├── offset_ahead: 0.1928\n",
-      "    ├── offset_behind: 0.4615\n",
-      "    ├── offset_mae: 0.1144\n",
-      "    ├── offset_mse: 0.0289\n",
-      "    ├── offset_tightness: 0.3773\n",
-      "    ├── velocity_corr: 0.1928\n",
-      "    ├── velocity_mae: 0.3722\n",
-      "    ├── velocity_mse: 0.2555\n",
-      "    └── velocity_range_diff: 0.0503\n",
-      "└── TRAINING:\n",
-      "    └── learning_rate: 0.000112\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer.train(train_loader, val_loader, epochs=1)"
    ]
