--- a/dataset/serialize.ipynb
+++ b/dataset/serialize.ipynb
@@ -6301,6 +6301,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Process Full groove"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count files in each subdirectory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "full-midionly: 1150 MIDI files\n"
+     ]
+    }
+   ],
+   "source": [
+    "midi_dir = os.path.join(script_dir, 'raw', \"GMD\", 'full-midionly.pkl')\n",
+    "with open(midi_dir, \"rb\") as f:\n",
+    "    midi_files = pickle.load(f)\n",
+    "\n",
+    "midi_files = midi_files['train'] + midi_files['test'] + midi_files['validation']\n",
+    "print(f\"full-midionly: {len(midi_files)} MIDI files\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Invalid file!\n",
+      "Time signatures: [TimeSignature(0, 4, 4, 'Tick'), TimeSignature(0, 4, 4, 'Tick')]\n",
+      "Tempos: [Tempo(0, 85.00004250002125, 705882, 'Tick'), Tempo(0, 85.00004250002125, 705882, 'Tick')]\n",
+      "Error: Invalid file!\n",
+      "Time signatures: [TimeSignature(0, 4, 4, 'Tick')]\n",
+      "Tempos: [Tempo(0, 109.99990833340972, 545455, 'Tick'), Tempo(0, 109.99990833340972, 545455, 'Tick')]\n",
+      "fullGMD: avg_dropped_notes: 0.0\n",
+      "dropped_set: set()\n",
+      "num_failures: 0\n",
+      "Saved 1150 entries to /Users/puruboii/Desktop/Github-Local/drum-genie/dataset/serialized/fullGMD.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = []\n",
+    "ID = 0\n",
+    "name = \"fullGMD\"\n",
+    "\n",
+    "num_dropped_notes = 0\n",
+    "num_failures = 0\n",
+    "dropped_set = set()\n",
+    "for data in midi_files:\n",
+    "    style = data['style_primary']\n",
+    "    metadata = [data['style_secondary'], data['time_signature'], data['bpm']]\n",
+    "    type = data['type']\n",
+    "    midi_bytes = data['midi']\n",
+    "\n",
+    "    try:\n",
+    "        feature = DrumMIDIFeature(midi_bytes, drum_map=ROLAND_TD_11_REDUCED_DRUM_MAP)\n",
+    "        time_signature = f\"{feature.score.time_signatures[0].numerator}/{feature.score.time_signatures[0].denominator}\"\n",
+    "        num_dropped_notes += feature.num_dropped_notes\n",
+    "        dropped_set.update(feature.dropped_set)        \n",
+    "    except Exception as e:\n",
+    "        try:    \n",
+    "            # Multiple tempo fix: extract first tempo from score\n",
+    "            score = Score.from_midi(midi_bytes)\n",
+    "            tempo = score.tempos[0].qpm\n",
+    "            score.tracks[0].is_drum = True\n",
+    "            score.tempos = [Tempo(time=0, qpm=tempo)]\n",
+    "            feature = DrumMIDIFeature.from_score(score, drum_map=ROLAND_TD_11_REDUCED_DRUM_MAP)\n",
+    "            time_signature = f\"{feature.score.time_signatures[0].numerator}/{feature.score.time_signatures[0].denominator}\"\n",
+    "            num_dropped_notes += feature.num_dropped_notes\n",
+    "            dropped_set.update(feature.dropped_set)\n",
+    "        except Exception as e2:\n",
+    "            print(f\"Error: {data['id'][:10]} - {e2}\")\n",
+    "            num_failures += 1\n",
+    "            continue\n",
+    "\n",
+    "    dataset.append({\n",
+    "                'id': f\"{name}_{ID}\",\n",
+    "                'map': 'roland_td_11',\n",
+    "                'style': style,\n",
+    "                'time_signature': time_signature,\n",
+    "                'type': type,\n",
+    "                'metadata': metadata,\n",
+    "                'midi_bytes': feature.score.dumps_midi()\n",
+    "            })\n",
+    "    \n",
+    "    ID += 1\n",
+    "    \n",
+    "\n",
+    "avg_dropped_notes = num_dropped_notes / len(dataset)\n",
+    "print(f\"{name}: avg_dropped_notes: {avg_dropped_notes}\")\n",
+    "print(f\"dropped_set: {dropped_set}\")\n",
+    "print(f\"num_failures: {num_failures}\")\n",
+    "out_name = os.path.join(dataset_root, f\"{name}.pkl\")\n",
+    "with open(out_name, \"wb\") as f:\n",
+    "    pickle.dump(dataset, f)\n",
+    "print(f\"Saved {len(dataset)} entries to {out_name}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test 5 random samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "style: gospel, time_signature: 4/4, type: fill\n",
+      "dropped_notes: 0\n",
+      "style: rock, time_signature: 4/4, type: beat\n",
+      "dropped_notes: 0\n",
+      "style: rock, time_signature: 4/4, type: fill\n",
+      "dropped_notes: 0\n",
+      "style: country, time_signature: 4/4, type: fill\n",
+      "dropped_notes: 0\n",
+      "style: rock, time_signature: 4/4, type: beat\n",
+      "dropped_notes: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(out_name, \"rb\") as f:\n",
+    "    dataset = pickle.load(f)\n",
+    "\n",
+    "for i in range(5):\n",
+    "    random_index = np.random.randint(0, len(dataset))\n",
+    "    datapoint = dataset[random_index]\n",
+    "    print(f\"style: {datapoint['style']}, time_signature: {datapoint['time_signature']}, type: {datapoint['type']}\")\n",
+    "    feature = DrumMIDIFeature(datapoint['midi_bytes'], drum_map=GM_REDUCED_DRUM_MAP)\n",
+    "    feature.play()\n",
+    "    print(f\"dropped_notes: {feature.num_dropped_notes}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Process Toontrack Drum MIDI Dataset"
    ]
   },
